--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.datasource.generate-unique-name=false
+# Turn off the Spring Boot banner
+spring.main.banner-mode=off
+# Reduce logging level. Set logging level to warn
+logging.level.root=warn
+#spring.jpa.properties.jakarta.persistence.validation.mode=none
+#spring.web.locale=tr
+```
